name:                card
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felix-clark/card#readme
license:             BSD3
license-file:        LICENSE
author:              Michael (Felix) Clark
maintainer:          example@example.com
copyright:           2017 Michael Clark
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- executable card
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
