name:                card
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felix-clark/card#readme
license:             BSD3
license-file:        LICENSE
author:              Michael (Felix) Clark
maintainer:          example@example.com
copyright:           2017 Michael Clark
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Card
                     , Deck
                     , Blackjack
                     , Strategy
                     , Count
                     , Dice
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , MonadRandom
  
     
executable test
  hs-source-dirs:      exe
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , card
                     , random-shuffle
                     , MonadRandom
